Add Uni folder sync

--- a/.config/Nextcloud/nextcloud.cfg
+++ b/.config/Nextcloud/nextcloud.cfg
@@ -1,7 +1,8 @@
 [General]
-clientVersion=3.7.4git
+clientVersion=3.8.1git
 confirmExternalStorage=true
 crashReporter=true
+isVfsEnabled=false
 monoIcons=true
 newBigFolderSizeLimit=500
 optionalServerNotifications=true
@@ -25,10 +26,17 @@ useNewBigFolderSizeLimit=true
 0\Folders\2\targetPath=/Music
 0\Folders\2\version=2
 0\Folders\2\virtualFilesMode=off
+0\Folders\3\ignoreHiddenFiles=false
+0\Folders\3\journalPath=.sync_c633b1176e17.db
+0\Folders\3\localPath=/home/ghoscht/Uni/
+0\Folders\3\paused=false
+0\Folders\3\targetPath=/Uni
+0\Folders\3\version=2
+0\Folders\3\virtualFilesMode=off
 0\authType=webflow
 0\dav_user=franz
 0\displayName=ghoscht
-0\serverVersion=25.0.1.1
+0\serverVersion=26.0.0.11
 0\url=http://nextcloud.franz.local
 0\user=@Invalid()
 0\version=1
@@ -36,4 +44,4 @@ useNewBigFolderSizeLimit=true
 version=2
 
 [Settings]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\f\x85\0\0\0\x19\0\0\x11u\0\0\x5\x95\0\0\f\x86\0\0\0*\0\0\x11t\0\0\x5\x94\0\0\0\0\0\0\0\0\n\0\0\0\f\x86\0\0\0*\0\0\x11t\0\0\x5\x94)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3\x14\0\0\x1}\0\0\af\0\0\x3\xa7\0\0\x3\x15\0\0\x1~\0\0\ae\0\0\x3\xa6\0\0\0\0\0\0\0\0\b\xd0\0\0\x3\x15\0\0\x1~\0\0\ae\0\0\x3\xa6)
